# Jack-O-Linter

./: .gitignore  .jackrc.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
docs/: milestone.md  proposal.md  report.md
docs/report/: report.md  requests.out
docs/test_results/: requests.default.out  requests.out  requests.recommendations.out
src/jack_o_linter/: __init__.py  __main__.py  common.py  config.py  errors.py  flake8.py  jackrc.yaml  mypy.py  pylint.py
